--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,62 @@
-# Ignore node_modules
+# Node modules
+node_modules/
 frontend/node_modules/
+
+# Next.js / Frontend build artifacts
 frontend/.next/
 frontend/out/
-frontend/.env.local
+frontend/.vercel/
+.vercel/
+.next/
+out/
 
-# Ignore Python virtual environment
-backend/venv/
-backend/__pycache__/
-backend/*.pyc
+# Build / distribution folders
+dist/
+build/
 
-# Ignore environment files
+# Local environment files (keep out of repo)
 **/.env
 **/.env.local
+**/.env.*
+.env
+.env.local
+.env.*.local
+.envrc
 
-# Ignore Firebase credentials
+# Python virtualenvs and caches
+backend/venv/
+venv/
+.venv/
+backend/__pycache__/
+backend/*.pyc
+__pycache__/
+*.py[cod]
+*.egg-info/
+pip-wheel-metadata/
+.pytest_cache/
+.coverage
+coverage/
+
+# Firebase credentials (avoid committing service credentials)
 **/firebase-credentials.json
+**/firebase-credentials.json.example
 
-# Ignore OS files
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# OS files
 .DS_Store
 *.swp
 *.swo
 
-# Ignore logs
-*.log
-
-# Ignore IDE files
+# IDE/editor
 .vscode/
 .idea/
+
+# Misc
+.pnpm-store/
+
