--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,4 +3,4 @@ FIREBASE_DATABASE_URL=https://your-project-id-default-rtdb.firebaseio.com
 
 # Flask Configuration
 FLASK_ENV=production
-FLASK_DEBUG=False
+FLASK_DEBUG=True
